# WarRoom

./: .dockerignore  .gitignore  .project-standards.md  Dockerfile  LICENSE  README.md  adaptive_inference.py  baseline_policy.py  benchmark.py  devops_warroom_project_context.md  inference.py  mcp_standards.py  openenv.yaml  pyproject.toml  requirements.txt  test_16_services.py  test_dense_rewards.py
DOCS/: SUBMISSION_SUMMARY.md  project_status_report_latest.md
environment/: __init__.py  actions.py  env.py  models.py  roles.py  scenarios.py  server.py
graders/: __init__.py  chaos.py  common.py  task_1.py  task_10.py  task_11.py  task_2.py  task_3.py  task_4.py  task_5.py  task_6.py  task_7.py  task_8.py  task_9.py
server/: app.py
tests/: test_graders.py  test_system.py
