[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devops-warroom"
version = "1.0.0"
description = "Living infrastructure incident simulator — OpenEnv environment"
authors = [
    {name = "BholeChature"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "pydantic>=2.7.1",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "openai>=1.30.0",
    "pytest>=8.2.0",
    "pyyaml>=6.0"
]

[tool.setuptools.packages.find]
include = ["environment*", "graders*"]
